Fix Border-radius clipping issue on a composited descendants Source/WebCore:

https://bugs.webkit.org/show_bug.cgi?id=138551

Patch by Byungseon Shin <sun.shin@lge.com> on 2015-01-26
Reviewed by Simon Fraser.

Fix assertion in RenderLayerBacking::paintIntoLayer
by not checking out of sync with the GraphicsLayer heirarchy
in GraphicsLayerPaintChildClippingMask phase.

Test: compositing/clipping/border-radius-overflow-hidden-stacking-context.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::paintIntoLayer):

LayoutTests:

https://bugs.webkit.org/show_bug.cgi?id=138551

Patch by Byungseon Shin <sun.shin@lge.com> on 2015-01-26
Reviewed by Simon Fraser.

Ref test that clips composited descendant by stacking context with border-radius and overflow hidden element.

* compositing/clipping/border-radius-overflow-hidden-stacking-context-expected.txt: Added.
* compositing/clipping/border-radius-overflow-hidden-stacking-context.html: Added.

Canonical link: https://commits.webkit.org/158896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179147 268f45cc-cd09-0410-ab3c-d52691b4dbfc